# Image-Segmentation-X-Lightning

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
configs/: conf.yaml
src/: config.py  constants.py  datamodule.py  dataset.py  lightning_module.py  metrics.py  train.py  transforms.py
src/callbacks/: debug.py  mask_visualizer_callback.py
